duplicate rows on cross category
